# ShadowFlow

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.web  DTempreadme_b64.txt  LICENSE  README.md  README.zh.md  TODOS.md  acp_adapter.py  docker-compose.yml  fly.toml  hardhat.config.cjs  hardhat.config.ts  i18next.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  playwright.story-15-24.config.ts  pyproject.toml  render.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.json
.claude/rules/: assembly-rules-sync.md
.github/workflows/: ci.yml
.shadowflow/agents/: agent-1bd48877f94c.json  agent-2b8b5d7a075c.json  agent-8e7e1e81ba32.json  agent-dd74bc6a8f5f.json  arch.agent.yaml  coord.agent.yaml  critic.agent.yaml  dev.agent.yaml  pm.agent.yaml  qa.agent.yaml  reader.agent.yaml  selection.35708.tmp  selection.json  writer.agent.yaml
.shadowflow/skills/: AGENTS.md
.shadowflow/teams/: BMAD-METHOD.team.yaml  bmad.team.yaml  paper-review.team.yaml  team-1cfedde1d4da.json  team-1f7b6136e750.json  team-32c49e3a85ab.json  team-416179ff91f7.json  team-4a204a76cbd2.json  team-51807631cd83.json  team-5b482ebf09b7.json  team-650206f2b9fc.json  team-6503ea5a5165.json  team-7749a8944af8.json  team-7aba2522e3c9.json  team-7c374c40d2bb.json  team-9336e4d8c6db.json  team-a3313eb640cb.json  team-a3a242d795b8.json  team-bc01f72d5ff7.json  team-c3f93b929fb1.json  team-d20876d906da.json  team-fd7522e8c129.json
_bmad-output/: project-context.md
_bmad-output/change-requests/: 2026-04-16-inbox-centric-collaboration.md  2026-04-23-frontend-quality-gates.md
_bmad-output/implementation-artifacts/: 0-1-docker-compose-一键启动.md  0-2-github-actions-ci-流水线.md  0-3-pydantic-typescript-类型生成脚本.md  0-4-readme-quick-start-独立复现指南.md  1-1-policy-matrix-核心对象-compile-time-非阻塞校验.md  1-2-approval-gate-节点类型.md  1-3-运行时真驳回-handoff-事件.md  1-4-驳回穿透多层-checkpoint-resume.md  1-5-trajectory-export-run-查询-api.md  11-2-shadowflow-fs-mcp-server.md  11-3-shadowflow-web-mcp-server.md  4-3-驳回事件视觉强化-toast.md  (+54 more)
_evidence/: round3-bmad-sse-head20-2026-05-24.txt
agentgraph/: __init__.py  cli.py  highlevel.py  mcp_server.py  server.py
bridge/: index.ts  package-lock.json  package.json  tsconfig.json
config/: app.json  network.json
contracts/: RunRegistry.sol  TemplateRegistry.sol
data/: do_result_ai_sql_agent.md
docs/: ADAPTER_BOUNDARY.md  AGENTGRAPH_INTEGRATION.md  AGENT_PLUGIN_CONTRACT.md  ARCHITECTURE.md  AgentGraph-Design-Doc.md  CHECKPOINT_STORE_CONTRACT.md  CLI_ANYTHING_RELATION.md  CLI_INSTALL_AND_USAGE.md  CORE_CHARTER.md  DESIGN.md  HERMES_CLAW_SPIKE.md  LEGACY_SURFACE_MAP.md  MULTI_AGENT_MEMORY_DESIGN.md  Memory-Flow-Design.md  Memory-Systems-Research.md  Node-Implementation-Details.md  PHASE0_SUMMARY.md  PHASE1_IMPLEMENTATION.md  README.md  README_LEGACY.md  RUNTIME_CONTRACT_SPEC.md  River-Memory-Design.md  River-Network-Design.md  SECURITY_ARCHITECTURE.md  SHADOWSOUL_RUNTIME_SPIKE.md  SHADOW_AGENTGRAPH_RESPONSIBILITY_MATRIX.md  SHADOW_CLAW_DESIGN.md  WHAT_IS_AGENTGRAPH.md  WORKFLOW_SCHEMA.md  WRITEBACK_ADAPTER_CONTRACT.md  Workflow-Nodes-Analysis.md  agent_config_system.md  agentgraph与langgraph  agentgraph计划书  automation_design.md  embodied_ai_strategy.md  how-assembly-works.md  planner_usage.md  session-2026-05-22-to-24-final-report.md  shadow_integration_strategy.md  (+4 more)
examples/: README.md  code-analysis-claude.yaml  data_analyzer_config.yaml  planner_example.py  simple_workflow.yaml  swarm_topology_example.py  usage_example.py
logs/: node-out.txt  uvicorn-8001-err.txt  uvicorn-err.txt
scripts/: accumulate_training_data.py  bench_zerog_compute.py  benchmark_training_accumulation.py  check_contracts.py  clean_activation_training_data.py  deploy_registry.cjs  deploy_registry.js  deploy_template_registry.cjs  deploy_template_registry.js  generate_ts_types.py  i18n-translate.mjs  migrate-json-to-sqlite.ts  package.json  smoke-install.ps1  smoke-routes.mjs  test_zerog_e2e.sh  upload-evidence.mjs  verify-run-session.mjs  zerog_broker_bridge.mjs
server/: AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
shadowflow/: __init__.py  cli.py  highlevel.py  mcp_server.py  server.py
src/: AGENTS.md  App.tsx  AppRoutes.test.tsx  AppRoutes.tsx  EditorPage.tsx  README.md  TemplatesPage.tsx  index.css  index.ts  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/.cargo/: llvm-cov.toml
src-tauri/.github/workflows/: ci.yml
src-tauri/benches/: indexing_benchmark.rs
src-tauri/src/: commands.rs  config.rs  error.rs  executor.rs  file_watcher.rs  http_api.rs  knowledge_base.rs  lib.rs  models.rs  storage.rs
src-tauri/tests/: main.rs
templates/: academic-paper.yaml  blank.yaml  consulting.yaml  modern-startup.yaml  newsroom.yaml  solo-company.yaml
tests/: README.md  __init__.py  cli-spawn-smoke.test.ts  conftest.py  sse-parser-fixture.test.ts  test_a2a_bridge.py  test_acp_approval_bridge.py  test_acp_client_session.py  test_acp_failure.py  test_acp_server.py  test_acp_transport.py  test_agent.py  test_agent_event_namespace.py  test_agent_executor_contract.py  test_agent_plugin_contract.py  test_agent_state.py  test_agentgraph.py  test_approval_gate.py  test_approvals_api.py  test_archive_api.py  test_assembly.py  test_assembly_activation.py  test_builder_api.py  test_builder_contracts.py  test_builder_import_agent.py  test_builder_promote_from_agent.py  test_builder_promote_schema.py  test_builder_publish.py  test_builder_scope_framing.py  test_builder_service.py  test_builder_service_prompt.py  test_builder_smoke_workflow_binding.py  test_catalog_api.py  test_catalog_service.py  test_chat_bridge.py  test_checkpoint_resume.py  test_citation_api.py  test_citation_service.py  test_cli_agent_executor.py  test_cli_executor_legacy.py  (+105 more)
ui_kits/: 8-1-blueprint-skeleton.html  8-2-goal-mode.html  8-3-scene-mode.html  8-4-knowledge-dock.html  8-4b-tool-registry.html  8-5-smoke-run.html  _kit.css  index.html
(+1403 files in other folders)
